# fido

./: .gitignore  ChangeLog  Makefile.am  README  README.md  acinclude.m4  aclocal.m4  configure.ac  go.sh  haha
doc/: Makefile.am  apache.conf  fido.conf.pod  fido.conf.sample  fido.pod  jboss.conf
include/joedog/: Makefile.am  defs.h  getopt.h  joedog.h
lib/joedog/: memory.c  notify.c  notify.h  perl.h  util.c  util.h
src/: Makefile.am  array.c  array.h  base16.c  base16.h  conf.c  conf.h  crew.c  crew.h  date.c  date.h  ereg.c  ereg.h  fido.c  fido.conf  fido.h  getopt.c  getopt1.c  hash.c  hash.h  logger.c  logger.h  main.c  memory.h  notify.c  notify.h  perl.c  pid.c  pid.h  rset.c  rset.h  rule.c  rule.h  runner.c  runner.h  setup.h  stralloc.c  stralloc.h  throttle.c  throttle.h  (+4 more)
utils/: Makefile.am  bootstrap  fido-redhat-config  fido-redhat-start  fido.service  install-startup  mkinstalldirs  rpm-6.spec  rpm-7.spec  rpm.make  rpm.sh  rpm.spec
